--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -1,12 +1,21 @@
 <body>
   <div class="container">
     <header>
-      <h1>Todo List</h1>
+      <h1>Todo List {{incompleteCount}}</h1>
 
-      <form class="new-task">
-        <input type="text" name="text" placeholder="Type to add new tasks"  />
-      </form>
-      
+      <label class="hide-completed">
+        <input type="checkbox" />
+        Hide Completed tasks
+      </label>
+
+      {{> loginButtons}}  <!-- Template del package accounts-ui -->
+
+      {{#if currentUser}} <!-- helper del package accounts-ui que nos brinda info acerca del usuario logeado -->
+        <form class="new-task">
+          <input type="text" name="text" placeholder="Type to add new tasks"  />
+        </form>
+      {{/if}}
+
     </header>
 
 
